@@ -193,6 +193,19 @@ track_to_add = 1
 # description: how many albums the plugin will try to get
 album_to_add = 1
 
+## TRACK_TO_ADD_FROM_ALBUM
+# type: integer
+# scope: "album" queue mode
+# description: how many tracks from one album the plugin will try to get
+#              defaults to 0 to queue the whole album
+track_to_add_from_album = 0
+
+## SHUFFLE_ALBUM
+# type: boolean
+# scope: "album" queue mode
+# description: should the tracks of the album be shuffled
+shuffle_album = false
+
 ## CACHE
 # type: boolean
 # description: whether or not to use on-disk persistent http cache
